style.css
@import url(./src/partials/styles/colors.css);
@import url(./src/partials/styles/fonts.css);
@import url(./src/partials/components/header.css);

@media (max-width: 600px) {
    header {
        display: flex;
        flex-direction: column;
        height: 100px;
    }
    h1 {
        display: none;
    }
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--bg-color);
}

.container {
    display: flex;
    flex-direction: column;
    gap: 40px;
    margin: auto;
    flex-wrap: wrap;
    margin-top: 50px;
    margin-bottom: 50px;
}
.card-top {
    display: flex;
    gap: 40px;
    flex-wrap: wrap;
    justify-content: center;
}
.card-bottom {
    display: flex;
    gap: 40px;
    flex-wrap: wrap;
    justify-content: center;
}

.image {
    height: 600px;
    background: url(https://wallpapers.com/images/hd/akatsuki-members-naruto-itachi-uchiha-4k-4xfoiebjxeyw1a7p.jpg)
        no-repeat top center/cover;
    position: relative;
}
.mod {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: black;
    opacity: 65%;
    display: flex;
}
.titulo {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    position: absolute;
    justify-content: end;
    align-items: center;
}
.titulo h2 {
    margin-bottom: 10px;
    font-size: 45px;
    font-family: inter;
    font-weight: var(--bold-inter);
    color: var(--text-color);
}
.titulo p {
    margin-bottom: 40px;
    font-size: 25px;
    font-family: inter;
    font-weight: var(--light-inter);
    color: var(--text-color);
}

.button-contact {
    padding: 14px 20px;
    color: #ffffff;
    background-color: var(--akatsuki-color);
    font-family: inter;
    font-weight: var(--medium-inter);
    border: 0;
    font-size: 18px;
    margin: 14px 0;
    transition: animation 0.2s;
    transition: box-shadow 0.8s;
    text-transform: uppercase;
    margin-bottom: 140px;
}
.button-contact:hover {
    animation: scaleButton 0.8s alternate infinite;
    box-shadow: 0 0 10px 0 #d94140;
}


@keyframes scaleButton {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.07);
    }
}

.carousel-control-prev-icon.bg-dark,
.carousel-control-next-icon.bg-dark {
    background-color: #292828 !important;
    padding: 1.2rem;
    border-radius: 50%;
}
 
 .carousel-control-prev,
 .carousel-control-next {
    width: 5%;
    background: none;
}

footer {
    height: 100px;
    background-color: var(--secondary-color);
    display: flex;
    justify-content: center;
    align-items: center;
}
address {
    display: flex;
    align-items: center;
}
address h4 {
    font-family: inter;
    font-weight: var(--medium-inter);
    color: var(--text-color);
    margin: 0;
}

